syntax = "proto3";

option java_multiple_files = true;
option java_generic_services = true;
option java_outer_classname = "Common";
option java_package = "com.park.utmstack.service.grpc";

package agent;

message ListRequest {
  int32 page_number = 1;
  int32 page_size = 2;
  string search_query = 3;
  string sort_by = 4;
}

enum Status {
  ONLINE = 0;
  OFFLINE = 1;
  UNKNOWN = 2;
}

enum ConnectorType{
  AGENT = 0;
  COLLECTOR = 1;
}

message AuthResponse {
  uint32 id = 1;
  string key = 2;
}

message DeleteRequest {
  string deleted_by = 1;
}
